--- a/austin-service-api/pom.xml
+++ b/austin-service-api/pom.xml
@@ -19,6 +19,37 @@
         </dependency>
 
         <dependency>
+            <groupId>com.quan</groupId>
+            <artifactId>austin-support</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.quan</groupId>
+            <artifactId>austin-handler</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.quan</groupId>
+            <artifactId>austin-cron</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.quan</groupId>
+            <artifactId>austin-stream</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.quan</groupId>
+            <artifactId>austin-client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
